--- a/react-hooks/src/App.css
+++ b/react-hooks/src/App.css
@@ -20,7 +20,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100pxs;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,7 @@
   }
 }
 
-button {
+button, input {
   padding: 10px 15px;
   border-radius: 5px;
   font-size: 18px;
@@ -51,5 +51,22 @@ button {
 
   &:hover {
     background-color: rgb(182, 182, 182);
+  }
+}
+
+nav a.active {
+  color: #61dafb;
+}
+
+nav ul {
+  width: 100%;
+  display: flex;
+  gap: 15px;
+  list-style: none;
+  font-size: 20px;
+  color: lightgray;
+
+  li a {
+    color: inherit;
   }
 }
